<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createWorkOrder">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-55dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/creatingOrderText"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:text="@string/creating_a_new_order"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/modelNumberText"
                android:layout_width="410dp"
                android:layout_height="37dp"
                android:text="@string/model_number"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/modelInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creatingOrderText"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/modelInput"
                android:layout_width="407dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modelNumberText" />

            <TextView
                android:id="@+id/materialText"
                android:layout_width="408dp"
                android:layout_height="48dp"
                android:text="@string/material"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/modelInput" />


            <Spinner
                android:id="@+id/materialDropdown"
                android:layout_width="409dp"
                android:layout_height="45dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialText" />


            <TextView
                android:id="@+id/orderDate"
                android:layout_width="407dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:onClick="datePickerDialog"
                android:text="@string/order_date"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDropdown" />


            <TextView
                android:id="@+id/displayDate"
                android:layout_width="408dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderDate" />

            <TextView
                android:id="@+id/baseColor"
                android:layout_width="406dp"
                android:layout_height="36dp"
                android:text="@string/base_color"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayDate" />

            <Spinner
                android:id="@+id/baseColorDropdown"
                android:layout_width="411dp"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseColor" />

            <EditText
                android:id="@+id/customerNameInput"
                android:layout_width="408dp"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/customer_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseColorDropdown" />

            <TextView
                android:id="@+id/caseOpeningText"
                android:layout_width="407dp"
                android:layout_height="43dp"
                android:text="@string/case_opening"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerNameInput" />

            <EditText
                android:id="@+id/caseOpeningInput"
                android:layout_width="407dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="in mm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caseOpeningText" />

            <TextView
                android:id="@+id/printingODText"
                android:layout_width="408dp"
                android:layout_height="36dp"
                android:text="@string/printing_od"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caseOpeningInput" />

            <EditText
                android:id="@+id/printingODInput"
                android:layout_width="406dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="in mm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/printingODText" />

            <TextView
                android:id="@+id/totalqtyText"
                android:layout_width="413dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:text="@string/total_quantity"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/printingODInput" />

            <EditText
                android:id="@+id/totalqtyInput"
                android:layout_width="409dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalqtyText" />

            <TextView
                android:id="@+id/finishText"
                android:layout_width="409dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/finish"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalqtyInput" />

            <Spinner
                android:id="@+id/finishDropdown"
                android:layout_width="409dp"
                android:layout_height="48dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finishText" />

            <Button
                android:id="@+id/generateButton"
                android:layout_width="147dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:onClick="onGenerateButtonClicked"
                android:text="@string/generate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finishDropdown"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>